--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
   "author": "Aleksei Kruglykhin",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.1.5",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
