--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-winston": "^4.2.0",
     "helmet": "^6.1.5",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
